[gd_scene load_steps=7 format=3 uid="uid://g74wblcejuc1"]

[ext_resource type="Script" path="res://class_editor.gd" id="1_gdhoq"]
[ext_resource type="PackedScene" uid="uid://boccq28qleadg" path="res://squad_list.tscn" id="2_k3h0j"]
[ext_resource type="PackedScene" uid="uid://b13op42pqpmk5" path="res://picker.tscn" id="3_j6iwf"]
[ext_resource type="PackedScene" uid="uid://cjmlqam3kpsvg" path="res://paper_doll.tscn" id="4_kwp35"]
[ext_resource type="PackedScene" uid="uid://deyqsf45d3wim" path="res://stat_list.tscn" id="5_dbm6s"]
[ext_resource type="PackedScene" uid="uid://bbvij8ic2388a" path="res://anything_list.tscn" id="6_qo1pc"]

[node name="ClassEditor" type="Panel"]
custom_minimum_size = Vector2(1200, 700)
offset_right = 1200.0
offset_bottom = 700.0
script = ExtResource("1_gdhoq")

[node name="Commit" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 638.5
offset_right = 99.0
offset_bottom = 669.5
text = "Commit"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 136.0
offset_right = 198.0
offset_bottom = 625.0

[node name="SquadList" parent="Panel3" instance=ExtResource("2_k3h0j")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Picker" parent="." instance=ExtResource("3_j6iwf")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 424.0
offset_top = 132.0
offset_right = 643.0
offset_bottom = 536.0
grow_horizontal = 1
grow_vertical = 1

[node name="ClassName" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 22.0
offset_right = 369.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 51
text = "CLASS NAME"

[node name="ClassOptions" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 99.0
offset_right = 303.0
offset_bottom = 119.0

[node name="InventoryContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 148.0
offset_right = 855.0
offset_bottom = 348.0

[node name="PaperDoll" parent="InventoryContainer" instance=ExtResource("4_kwp35")]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 360.0
offset_right = 859.0
offset_bottom = 635.0

[node name="FuelList" parent="StatsContainer" instance=ExtResource("5_dbm6s")]
layout_mode = 2

[node name="AbilityContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 871.0
offset_top = 103.0
offset_right = 1178.0
offset_bottom = 658.0

[node name="LessonList" parent="AbilityContainer" instance=ExtResource("6_qo1pc")]
layout_mode = 2

[node name="AbilityList" parent="AbilityContainer" instance=ExtResource("6_qo1pc")]
layout_mode = 2

[node name="NewClass" type="Button" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 94.0
offset_right = 362.0
offset_bottom = 125.0
text = "New"

[node name="HireClass" type="Button" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 95.0
offset_right = 431.0
offset_bottom = 126.0
text = "Produce"

[connection signal="pressed" from="Commit" to="." method="_on_commit_pressed"]
[connection signal="item_selected" from="ClassOptions" to="." method="_on_class_options_item_selected"]
[connection signal="pressed" from="NewClass" to="." method="_on_new_class_pressed"]
[connection signal="pressed" from="HireClass" to="." method="_on_hire_class_pressed"]
